# setup-cov

./: README.md  pyproject.toml  run_test.sh
.github/workflows/: blank.yml
common/: cov.xml
common/src/: utils.py
common/tests/: test_utils.py
services/service1/: cov.xml
services/service1/src/: main.py
services/service1/tests/: test_calc.py
