[tool.poetry]
name = "setup-cov"
version = "0.1.0"
description = ""
authors = ["sagarkar10 <sagarkar10@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
coverage = "^7.9.1"
pytest = "^8.4.1"
pytest-cov = "^6.2.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
